src/libqguiapplication.h

typedef struct QClipboard QClipboard;
typedef struct QCursor QCursor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QGuiApplication QGuiApplication;
typedef struct QIcon QIcon;
typedef struct QInputMethod QInputMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPalette QPalette;
typedef struct QPoint QPoint;
typedef struct QScreen QScreen;
typedef struct QStyleHints QStyleHints;
typedef struct QWindow QWindow;
QGuiApplication* QGuiApplication_new(int* argc, char** argv);
QGuiApplication* QGuiApplication_new2(int* argc, char** argv, int param3);
QMetaObject* QGuiApplication_MetaObject(const QGuiApplication* self);
void* QGuiApplication_Metacast(QGuiApplication* self, const char* param1);
int QGuiApplication_Metacall(QGuiApplication* self, int param1, int param2, void** param3);
libqt_string QGuiApplication_Tr(const char* s);
void QGuiApplication_SetApplicationDisplayName(libqt_string name);
libqt_string QGuiApplication_ApplicationDisplayName();
void QGuiApplication_SetDesktopFileName(libqt_string name);
libqt_string QGuiApplication_DesktopFileName();
libqt_list /* of QWindow* */ QGuiApplication_AllWindows();
libqt_list /* of QWindow* */ QGuiApplication_TopLevelWindows();
QWindow* QGuiApplication_TopLevelAt(QPoint* pos);
void QGuiApplication_SetWindowIcon(QIcon* icon);
QIcon* QGuiApplication_WindowIcon();
libqt_string QGuiApplication_PlatformName();
QWindow* QGuiApplication_ModalWindow();
QWindow* QGuiApplication_FocusWindow();
QObject* QGuiApplication_FocusObject();
QScreen* QGuiApplication_PrimaryScreen();
libqt_list /* of QScreen* */ QGuiApplication_Screens();
QScreen* QGuiApplication_ScreenAt(QPoint* point);
double QGuiApplication_DevicePixelRatio(const QGuiApplication* self);
QCursor* QGuiApplication_OverrideCursor();
void QGuiApplication_SetOverrideCursor(QCursor* overrideCursor);
void QGuiApplication_ChangeOverrideCursor(QCursor* param1);
void QGuiApplication_RestoreOverrideCursor();
QFont* QGuiApplication_Font();
void QGuiApplication_SetFont(QFont* font);
QClipboard* QGuiApplication_Clipboard();
QPalette* QGuiApplication_Palette();
void QGuiApplication_SetPalette(QPalette* pal);
int QGuiApplication_KeyboardModifiers();
int QGuiApplication_QueryKeyboardModifiers();
int QGuiApplication_MouseButtons();
void QGuiApplication_SetLayoutDirection(int direction);
int QGuiApplication_LayoutDirection();
bool QGuiApplication_IsRightToLeft();
bool QGuiApplication_IsLeftToRight();
QStyleHints* QGuiApplication_StyleHints();
void QGuiApplication_SetDesktopSettingsAware(bool on);
bool QGuiApplication_DesktopSettingsAware();
QInputMethod* QGuiApplication_InputMethod();
void QGuiApplication_SetQuitOnLastWindowClosed(bool quit);
bool QGuiApplication_QuitOnLastWindowClosed();
int QGuiApplication_ApplicationState();
void QGuiApplication_SetHighDpiScaleFactorRoundingPolicy(int policy);
int QGuiApplication_HighDpiScaleFactorRoundingPolicy();
int QGuiApplication_Exec();
bool QGuiApplication_Notify(QGuiApplication* self, QObject* param1, QEvent* param2);
bool QGuiApplication_IsSessionRestored(const QGuiApplication* self);
libqt_string QGuiApplication_SessionId(const QGuiApplication* self);
libqt_string QGuiApplication_SessionKey(const QGuiApplication* self);
bool QGuiApplication_IsSavingSession(const QGuiApplication* self);
void QGuiApplication_Sync();
void QGuiApplication_Connect_FontDatabaseChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_ScreenAdded(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_ScreenRemoved(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_PrimaryScreenChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_LastWindowClosed(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_FocusObjectChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_FocusWindowChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_ApplicationStateChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_LayoutDirectionChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_CommitDataRequest(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_SaveStateRequest(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_ApplicationDisplayNameChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_PaletteChanged(QGuiApplication* self, intptr_t slot);
void QGuiApplication_Connect_FontChanged(QGuiApplication* self, intptr_t slot);
bool QGuiApplication_Event(QGuiApplication* self, QEvent* param1);
libqt_string QGuiApplication_Tr2(const char* s, const char* c);
libqt_string QGuiApplication_Tr3(const char* s, const char* c, int n);
void* QGuiApplication_ResolveInterface(const QGuiApplication* self, const char* name, int revision);
void QGuiApplication_Delete(QGuiApplication* self);