src/qt/libqguiapplication.bf

extension CQt
{
	[LinkName("QGuiApplication_new")]
	public static extern void* QGuiApplication_new(int32* argc, char8* argv);
	[LinkName("QGuiApplication_new2")]
	public static extern void* QGuiApplication_new2(int32* argc, char8* argv, int32 param3);
	[LinkName("QGuiApplication_MetaObject")]
	public static extern void* QGuiApplication_MetaObject(void* c_this);
	[LinkName("QGuiApplication_Metacast")]
	public static extern void* QGuiApplication_Metacast(void* c_this, char8* param1);
	[LinkName("QGuiApplication_Metacall")]
	public static extern int32 QGuiApplication_Metacall(void* c_this, int64 param1, int32 param2, void* param3);
	[LinkName("QGuiApplication_Tr")]
	public static extern libqt_string QGuiApplication_Tr(char8* s);
	[LinkName("QGuiApplication_SetApplicationDisplayName")]
	public static extern void QGuiApplication_SetApplicationDisplayName(libqt_string name);
	[LinkName("QGuiApplication_ApplicationDisplayName")]
	public static extern libqt_string QGuiApplication_ApplicationDisplayName();
	[LinkName("QGuiApplication_SetDesktopFileName")]
	public static extern void QGuiApplication_SetDesktopFileName(libqt_string name);
	[LinkName("QGuiApplication_DesktopFileName")]
	public static extern libqt_string QGuiApplication_DesktopFileName();
	[LinkName("QGuiApplication_AllWindows")]
	public static extern void*[] QGuiApplication_AllWindows();
	[LinkName("QGuiApplication_TopLevelWindows")]
	public static extern void*[] QGuiApplication_TopLevelWindows();
	[LinkName("QGuiApplication_TopLevelAt")]
	public static extern void* QGuiApplication_TopLevelAt(void* pos);
	[LinkName("QGuiApplication_SetWindowIcon")]
	public static extern void QGuiApplication_SetWindowIcon(void* icon);
	[LinkName("QGuiApplication_WindowIcon")]
	public static extern void QGuiApplication_WindowIcon();
	[LinkName("QGuiApplication_PlatformName")]
	public static extern libqt_string QGuiApplication_PlatformName();
	[LinkName("QGuiApplication_ModalWindow")]
	public static extern void* QGuiApplication_ModalWindow();
	[LinkName("QGuiApplication_FocusWindow")]
	public static extern void* QGuiApplication_FocusWindow();
	[LinkName("QGuiApplication_FocusObject")]
	public static extern void* QGuiApplication_FocusObject();
	[LinkName("QGuiApplication_PrimaryScreen")]
	public static extern void* QGuiApplication_PrimaryScreen();
	[LinkName("QGuiApplication_Screens")]
	public static extern void*[] QGuiApplication_Screens();
	[LinkName("QGuiApplication_ScreenAt")]
	public static extern void* QGuiApplication_ScreenAt(void* point);
	[LinkName("QGuiApplication_DevicePixelRatio")]
	public static extern double QGuiApplication_DevicePixelRatio(void* c_this);
	[LinkName("QGuiApplication_OverrideCursor")]
	public static extern void* QGuiApplication_OverrideCursor();
	[LinkName("QGuiApplication_SetOverrideCursor")]
	public static extern void QGuiApplication_SetOverrideCursor(void* overrideCursor);
	[LinkName("QGuiApplication_ChangeOverrideCursor")]
	public static extern void QGuiApplication_ChangeOverrideCursor(void* param1);
	[LinkName("QGuiApplication_RestoreOverrideCursor")]
	public static extern void QGuiApplication_RestoreOverrideCursor();
	[LinkName("QGuiApplication_Font")]
	public static extern void QGuiApplication_Font();
	[LinkName("QGuiApplication_SetFont")]
	public static extern void QGuiApplication_SetFont(void* font);
	[LinkName("QGuiApplication_Clipboard")]
	public static extern void* QGuiApplication_Clipboard();
	[LinkName("QGuiApplication_Palette")]
	public static extern void QGuiApplication_Palette();
	[LinkName("QGuiApplication_SetPalette")]
	public static extern void QGuiApplication_SetPalette(void* pal);
	[LinkName("QGuiApplication_KeyboardModifiers")]
	public static extern int64 QGuiApplication_KeyboardModifiers();
	[LinkName("QGuiApplication_QueryKeyboardModifiers")]
	public static extern int64 QGuiApplication_QueryKeyboardModifiers();
	[LinkName("QGuiApplication_MouseButtons")]
	public static extern int64 QGuiApplication_MouseButtons();
	[LinkName("QGuiApplication_SetLayoutDirection")]
	public static extern void QGuiApplication_SetLayoutDirection(int64 direction);
	[LinkName("QGuiApplication_LayoutDirection")]
	public static extern int64 QGuiApplication_LayoutDirection();
	[LinkName("QGuiApplication_IsRightToLeft")]
	public static extern bool QGuiApplication_IsRightToLeft();
	[LinkName("QGuiApplication_IsLeftToRight")]
	public static extern bool QGuiApplication_IsLeftToRight();
	[LinkName("QGuiApplication_StyleHints")]
	public static extern void* QGuiApplication_StyleHints();
	[LinkName("QGuiApplication_SetDesktopSettingsAware")]
	public static extern void QGuiApplication_SetDesktopSettingsAware(bool on);
	[LinkName("QGuiApplication_DesktopSettingsAware")]
	public static extern bool QGuiApplication_DesktopSettingsAware();
	[LinkName("QGuiApplication_InputMethod")]
	public static extern void* QGuiApplication_InputMethod();
	[LinkName("QGuiApplication_SetQuitOnLastWindowClosed")]
	public static extern void QGuiApplication_SetQuitOnLastWindowClosed(bool quit);
	[LinkName("QGuiApplication_QuitOnLastWindowClosed")]
	public static extern bool QGuiApplication_QuitOnLastWindowClosed();
	[LinkName("QGuiApplication_ApplicationState")]
	public static extern int64 QGuiApplication_ApplicationState();
	[LinkName("QGuiApplication_SetHighDpiScaleFactorRoundingPolicy")]
	public static extern void QGuiApplication_SetHighDpiScaleFactorRoundingPolicy(int64 policy);
	[LinkName("QGuiApplication_HighDpiScaleFactorRoundingPolicy")]
	public static extern int64 QGuiApplication_HighDpiScaleFactorRoundingPolicy();
	[LinkName("QGuiApplication_Exec")]
	public static extern int32 QGuiApplication_Exec();
	[LinkName("QGuiApplication_Notify")]
	public static extern bool QGuiApplication_Notify(void* c_this, void* param1, void* param2);
	[LinkName("QGuiApplication_IsSessionRestored")]
	public static extern bool QGuiApplication_IsSessionRestored(void* c_this);
	[LinkName("QGuiApplication_SessionId")]
	public static extern libqt_string QGuiApplication_SessionId(void* c_this);
	[LinkName("QGuiApplication_SessionKey")]
	public static extern libqt_string QGuiApplication_SessionKey(void* c_this);
	[LinkName("QGuiApplication_IsSavingSession")]
	public static extern bool QGuiApplication_IsSavingSession(void* c_this);
	[LinkName("QGuiApplication_ResolveInterface")]
	public static extern void* QGuiApplication_ResolveInterface(void* c_this, char8* name, int32 revision);
	[LinkName("QGuiApplication_Sync")]
	public static extern void QGuiApplication_Sync();
	[LinkName("QGuiApplication_Connect_FontDatabaseChanged")]
	public static extern void QGuiApplication_Connect_FontDatabaseChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_ScreenAdded")]
	public static extern void QGuiApplication_Connect_ScreenAdded(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_ScreenRemoved")]
	public static extern void QGuiApplication_Connect_ScreenRemoved(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_PrimaryScreenChanged")]
	public static extern void QGuiApplication_Connect_PrimaryScreenChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_LastWindowClosed")]
	public static extern void QGuiApplication_Connect_LastWindowClosed(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_FocusObjectChanged")]
	public static extern void QGuiApplication_Connect_FocusObjectChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_FocusWindowChanged")]
	public static extern void QGuiApplication_Connect_FocusWindowChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_ApplicationStateChanged")]
	public static extern void QGuiApplication_Connect_ApplicationStateChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_LayoutDirectionChanged")]
	public static extern void QGuiApplication_Connect_LayoutDirectionChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_CommitDataRequest")]
	public static extern void QGuiApplication_Connect_CommitDataRequest(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_SaveStateRequest")]
	public static extern void QGuiApplication_Connect_SaveStateRequest(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_ApplicationDisplayNameChanged")]
	public static extern void QGuiApplication_Connect_ApplicationDisplayNameChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_PaletteChanged")]
	public static extern void QGuiApplication_Connect_PaletteChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Connect_FontChanged")]
	public static extern void QGuiApplication_Connect_FontChanged(void* c_this, c_intptr slot);
	[LinkName("QGuiApplication_Event")]
	public static extern bool QGuiApplication_Event(void* c_this, void* param1);
	[LinkName("QGuiApplication_Tr2")]
	public static extern libqt_string QGuiApplication_Tr2(char8* s, char8* c);
	[LinkName("QGuiApplication_Tr3")]
	public static extern libqt_string QGuiApplication_Tr3(char8* s, char8* c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QGuiApplication_Delete")]
	public static extern void QGuiApplication_Delete(void* self);
}